<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authactivity"
    android:background="@color/Colorprimarioinferior">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/fondoingreso"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.496">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:srcCompat="@mipmap/ic_upautos_foreground" />

        <TextView
            android:id="@+id/titleregister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/app_name"
            android:textSize="35dp"

            />

        <TextView
            android:id="@+id/TextViewname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="79dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:text="@string/TextViewname" />

        <EditText
            android:id="@+id/editTextname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            tools:ignore="TouchTargetSizeCheck" />


        <TextView
            android:id="@+id/textViewsurname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="79dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:text="@string/TextViewsurname" />

        <EditText
            android:id="@+id/editTextsurname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textViewemail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="86dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:text="@string/TextViewemail" />

        <EditText
            android:id="@+id/editTextemailregister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/textViewpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="68dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:text="@string/TextViewpassword" />

        <EditText
            android:id="@+id/editTextPasswordregister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />


        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="210dp"
            android:layout_height="20dp"
            android:gravity="center"
            android:text="@string/TermsandConditions"
            android:textSize="10dp" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="210dp"
            android:layout_height="20dp"
            android:text="@string/Record"
            android:textSize="10dp" />

        <Button
            android:id="@+id/btnregister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/btningreso"
            android:padding="5dp"
            android:text="@string/TextRegister"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/HaveAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/HaveAccount"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/HaveAccountR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:clickable="true"
                android:text="@string/HaveAccountL"
                android:textSize="10sp" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>