<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".publicationsViewActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/Colorprimarioinferior">

        <ImageView
            android:id="@+id/auto_foto_view"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:layout_centerHorizontal="true" />

<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backgroundsell"

    >
        <TextView
            android:layout_marginTop="50dp"
            android:id="@+id/publicationstitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="#000000"
            android:textAlignment="center"
            android:layout_marginBottom="5dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:paddingBottom="20dp"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="50dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="15dp">

            <TextView
                android:id="@+id/publicationsPriceA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="2dp"
                android:text="@string/Pricecar"
                android:textColor="#000000"
                android:paddingBottom="15dp"
                android:textSize="17dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/publicationsPriceB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$"
                android:textColor="#000000"
                android:textSize="17dp"/>
            <TextView
                android:id="@+id/publicationsPriceC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="2dp"
                android:text="200"
                android:textColor="#000000"
                android:textSize="17dp"/>

        </LinearLayout>
<LinearLayout
    android:background="@color/browser_actions_bg_grey"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingRight="50dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="15dp">

            <TextView
                android:id="@+id/publicationsMarcaA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="2dp"
                android:text="@string/Marcacar"
                android:textColor="#000000"
                android:textSize="17dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/publicationsMarcaB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#000000"
                android:textSize="17dp"/>

            <TextView
                android:id="@+id/publicationsAnioA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="2dp"
                android:text="@string/anio"
                android:textColor="#000000"
                android:textSize="17dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/publicationsAnioB"
                android:paddingLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="2021"
                android:textColor="#000000"
                android:textSize="17dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/publicationsdescripcionA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Descriptioncar"
            android:textColor="#000000"
            android:paddingBottom="15dp"
            android:textSize="17dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/publicationsdescripcionB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="#000000"
            android:paddingBottom="15dp"
            android:textSize="17dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:textSize="17dp">

            <TextView
                android:id="@+id/publicationscontactA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact"
                android:textColor="#000000"
                android:textSize="17dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/publicationscontactB"
                android:paddingLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="facundo@gmail.com"
                android:textColor="#000000"
                android:textSize="17dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/publicationstelA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textColor="#000000"
                android:textSize="17dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/publicationstelB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:paddingLeft="5dp"
                android:text="+542984222222"
                android:textSize="17dp"/>
        </LinearLayout>
</LinearLayout>
    </LinearLayout>
</LinearLayout>
</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>